--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@ position: relative;
     position: absolute;
     font-weight: 500;
 }
-.bodybox .discription{
+.bodybox .Description{
     font-size: 20px;
     color: black;
     text-transform: capitalize;
