--- a/movie.css
+++ b/movie.css
@@ -36,11 +36,12 @@ h1{
 
 }
 .count input{
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     color: rgba(0, 0, 0, 0.959);
     font-size: 23px;
     font-weight: 600;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: azure;
 }
 button{
     font-size: 23px;
@@ -50,6 +51,7 @@ button{
     margin: 30px;
     padding-left: 5px;
     padding-right: 5px;
-    
+    background-color: rgba(189, 234, 219, 0.91);
+
 
 }
